white space fix (no wrapping)

--- a/src/public/css/style.styl
+++ b/src/public/css/style.styl
@@ -680,6 +680,7 @@ input
       margin 0
       background none
       overflow visible
+      white-space nowrap
       position absolute
 .active_view,.active_theme_id
   display none
